# POS

./: API_DOCUMENTATION.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/: blueprint.md
scripts/: extract-crates.sh  generate-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: config.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/services/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/utils/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(manager)/: layout.tsx
src/app/(manager)/dashboard/: page.tsx
src/app/(manager)/menu/: page.tsx
src/app/(manager)/staff/: page.tsx
src/components/: AppBody.tsx  AppSidebar.tsx  NotificationBell.tsx  OrderPopup.tsx  TableCard.tsx  TableGrid.tsx
src/components/manager/: SalesChart.tsx  StaffOnDuty.tsx
src/components/ui/: button.tsx  dialog.tsx
src/data/: menu.ts  staff.ts  tables.ts
src/hooks/: use-sidebar.tsx
src/lib/: types.ts
