[package]
name = "pos-app"
version = "0.1.0"
description = "A POS application with Next.js frontend and Rust backend"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
