[package]
name = "pos-app"
version = "0.1.0"
description = "A POS application with Next.js frontend and Rust backend"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
once_cell = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dirs = "5.0"
rand = "0.8"
regex = "1.0"
lazy_static = "1.4"

[features]
custom-protocol = ["tauri/custom-protocol"] 
